--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
     <div class="container">
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w1a.html" target="_blank">
                     <h3>W1a: Basics of Information</h3>
                     <img width="100%" src="http://img.youtube.com/vi/IicB30kA3pY/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w1b.html" target="_blank">
                     <h3>W1b: Digital Abstraction</h3>
                     <img width="100%" src="http://img.youtube.com/vi/1T6pYideIAg/mqdefault.jpg" />
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w2a.html" target="_blank">
                     <h3>W2a: CMOS Technology</h3>
                     <img width="100%" src="http://img.youtube.com/vi/_LtFNHXoBOE/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w2b.html" target="_blank">
                     <h3>W2b: Logic Synthesis</h3>
                     <img width="100%" src="http://img.youtube.com/vi/RhKts96J4lQ/mqdefault.jpg" />
@@ -64,13 +64,13 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w3a.html" target="_blank">
                     <h3>W3a: Sequential Logic & Sync</h3>
                     <img width="100%" src="http://img.youtube.com/vi/MNeNC13HQSw/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w3b.html" target="_blank">
                     <h3>W3b: Finite State Machines</h3>
                     <img width="100%" src="http://img.youtube.com/vi/WXmdVCPA-u8/mqdefault.jpg" />
@@ -78,13 +78,13 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w4a.html" target="_blank">
                     <h3>W4a: Turing Machine</h3>
                     <img width="100%" src="http://img.youtube.com/vi/X_YVKoEr--E/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w4b.html" target="_blank">
                     <h3>W4b: Designing an Instruction Set</h3>
                     <img width="100%" src="http://img.youtube.com/vi/WAeEzhLAFHw/mqdefault.jpg" />
@@ -92,22 +92,22 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w5.html" target="_blank">
                     <h3>W5: Building the Beta CPU</h3>
                     <img width="100%" src="http://img.youtube.com/vi/5bt1hkxRrTY/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col"></div>
+            <div class="col-md-6"></div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w9a.html" target="_blank">
                     <h3>W9a: Assemblers and Compilers</h3>
                     <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w9b.html" target="_blank">
                     <h3>W9b: Stacks and Procedures</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
@@ -116,14 +116,14 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w10a.html" target="_blank">
                     <h3>W10a: Memory Hierarchy</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
                     <img width="100%" src="https://via.placeholder.com/480x270?text=To+be+released" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w10b.html" target="_blank">
                     <h3>W10b: Cache Design Issues</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
@@ -132,14 +132,14 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w11a.html" target="_blank">
                     <h3>W11a: Virtual Memory</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
                     <img width="100%" src="https://via.placeholder.com/480x270?text=To+be+released" />
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w4b.html" target="_blank">
                     <h3>W11b: Virtual Machine</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="row top-buffer">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="./pages/w13.html" target="_blank">
                     <h3>W13: Async Handling</h3>
                     <!-- <img width="100%" src="http://img.youtube.com/vi/qVD14wDf45g/mqdefault.jpg" /> -->
